@@ -2784,6 +2784,8 @@ You can view its source.',
 'tooltip-watch'                   => 'Add this page to your watchlist',
 'tooltip-recreate'                => 'Recreate the page despite it having been deleted',
 'tooltip-upload'                  => 'Start upload',
+'tooltip-rollback'                => '"Rollback" reverts edit(s) to this page of the last contributor in one click.',
+'tooltip-undo'                    => '"Undo" reverts this edit and opens the edit form in preview mode. Allows adding a reason in the summary.',
 
 # Stylesheets
 'common.css'      => '/* CSS placed here will be applied to all skins */', # only translate this message to other languages if you have to change it
