@@ -95,6 +95,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13815) In the comment for page moves, use the colon-separator message
   instead of a hardcoded colon.
 * Allow <gallery> to accept image names without an Image: prefix
+* Add tooltips to rollback and undo links
 
 === Bug fixes in 1.14 ===
 
